# docker_quest

./: Dockerfile  README.md  crypto.key  docker-compose.yml  pyproject.toml
app/: main.py  services.py
app/files/: answer.txt
app/static/: step1.html  step2.html  step3.html
