[tool.poetry]
name = "docker_quest"
version = "0.1.0"
description = ""
authors = ["Kurochkin Daniil <kurochkindaniil02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
bcrypt = "^3.2.0"
cryptography = "^36.0.2"
unicorn = "^1.0.3"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
